--- a/css/main.scss
+++ b/css/main.scss
@@ -24,7 +24,7 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 $code-backgroud-color: #29281e;
-$code-font-color:  #eee;  
+$code-font-color:  #eee;
 
 
 // Width of the content area
@@ -61,3 +61,5 @@ $on-laptop:        800px;
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
 
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+
+@import url('github-styles.css');
